--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>Learn About Clinical Trials</title>
+    <title>Learn About Clinical Research</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
@@ -18,8 +18,8 @@
         <div id="start">
             <span><h1>Alex&nbsp;</h1><h2>| Virtual Health Assistant</h2></span>
             <hr/>
-            <h3>Learn About Clinical Trials</h3>
-            <p id="intro">Welcome! You are about to start chatting with <b>Alex, a Virtual Health Assistant,</b> to learn about clinical trials. Before you begin, you will view some <b>instructions</b> on how to interact with Alex. Click the button below to begin!</p>
+            <h3>Learn About Clinical Research</h3>
+            <p id="intro">Welcome! You are about to start chatting with <b>Alex, a Virtual Health Assistant,</b> to learn about cancer clinical research. Before you begin, you will view some <b>instructions</b> on how to interact with Alex. Click the button below to begin!</p>
             <button class="default" id="instructions-btn">Continue</button>
             <div id="information">
                 <div class="loader" style="--n: 1; --f: 0;">Instructions:&nbsp;<span id="number">1/4</span></div>
