--- a/public/interaction.html
+++ b/public/interaction.html
@@ -31,8 +31,11 @@
 <body>
     <div id="loading-screen">
         <div id="loading-animation">
-            <div class="col-md-12 text-center">
-              <span><h1>Alex&nbsp;</h1><h2>| Virtual Health Assistant</h2></span>
+            <div class="loading-content">
+              <div class="header loading-header">
+                <span><h1>Alex&nbsp;</h1><h2>| Virtual Health Assistant</h2></span>
+                <br/>
+              </div>
               <div class="loader" style="--n: 1; --f: 0;">LOADING ... </div>
               <div id="loader-animation" class="progress2 progress-moved">
                 <div class="progress-bar2"></div>
